<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/tvResolucion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Resolución"
            android:textColor="@color/textoAzul"
            android:textSize="@dimen/text_titulo"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Layout"
            android:textColor="@color/textoAzul"
            android:textSize="@dimen/text_titulo"
            android:textStyle="bold" />


        <CheckBox
            android:id="@+id/chkDemo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/config_strDemo"
            android:textSize="@dimen/text_titulo"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="70dp"

            />

        <TextView
            android:id="@+id/tvEmpresa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/config_strEmpresa"
            android:textColor="@color/textoAzul"
            android:textSize="@dimen/text_titulo"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etEmpresa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="70dp"
            android:inputType="text"
            android:hint="@string/config_strEmpresa"
            android:textSize="@dimen/text_titulo"
            android:textColor="@color/colorAccent"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvCodigo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/config_strCodigo"
                android:textSize="@dimen/text_titulo"
                android:textColor="@color/textoAzul"
                android:textStyle="bold"
                android:layout_marginLeft="30dp"/>

            <EditText
                android:id="@+id/etCodigo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="70dp"
                android:inputType="text"
                android:hint="@string/config_strEmpresa"
                android:textSize="@dimen/text_titulo"
                android:textColor="@color/colorAccent"/>

        </LinearLayout>

        <CheckBox
            android:id="@+id/chkCargaLineasVenta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/config_strCargaLineasVenta"
            android:textStyle="bold"
            android:textSize="@dimen/text_titulo"
            android:textColor="@color/textoAzul"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="70dp"
            android:checked="true"

            />

        <CheckBox
            android:id="@+id/chkMantenerVenta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/config_strMantenerVenta"
            android:textStyle="bold"
            android:textSize="@dimen/text_titulo"
            android:textColor="@color/textoAzul"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="70dp"
            android:checked="false"

            />

        <CheckBox
            android:id="@+id/chkClaveCamareros"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/config_strClaveCamareros"
            android:textStyle="bold"
            android:textSize="@dimen/text_titulo"
            android:textColor="@color/textoAzul"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="70dp"

            />

        <CheckBox
            android:id="@+id/chkPax"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/config_strPax"
            android:textStyle="bold"
            android:textSize="@dimen/text_titulo"
            android:textColor="@color/textoAzul"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="70dp"

            />

        <CheckBox
            android:id="@+id/chkMostrarProductos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/config_strMostrarProductosAuto"
            android:textStyle="bold"
            android:textSize="@dimen/text_titulo"
            android:textColor="@color/textoAzul"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="70dp"

            />

        <CheckBox
            android:id="@+id/chkMantenerProductos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/config_strMantenerProductos"
            android:textStyle="bold"
            android:textSize="@dimen/text_titulo"
            android:textColor="@color/textoAzul"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="70dp"

            />

        <CheckBox
            android:id="@+id/chkCompacto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/config_strCompacto"
            android:textStyle="bold"
            android:textSize="@dimen/text_titulo"
            android:textColor="@color/textoAzul"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="70dp"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/config_strFormaPago"
            android:textSize="@dimen/text_titulo"
            android:textColor="@color/textoAzul"
            android:textStyle="bold"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/fondoFrgFormaPago"
            android:layout_marginRight="15dp">

            <CheckBox
                android:id="@+id/chkEfectivo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/config_strEfectivo"
                android:textStyle="bold"
                android:textSize="@dimen/text_titulo"
                android:textColor="@color/textoAzul"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="40dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                />

            <CheckBox
                android:id="@+id/chkTarjeta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/config_strTarjeta"
                android:textStyle="bold"
                android:textSize="@dimen/text_titulo"
                android:textColor="@color/textoAzul"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="25dp"
                android:layout_alignParentRight="true"
                android:layout_alignBaseline="@id/chkEfectivo"
                />

            <CheckBox
                android:id="@+id/chkEfetar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/config_strPagoMultiple"
                android:textStyle="bold"
                android:textSize="@dimen/text_titulo"
                android:textColor="@color/textoAzul"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="70dp"
                android:layout_below="@id/chkEfectivo"

                />

            <CheckBox
                android:id="@+id/chkPension"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/config_strPension"
                android:textStyle="bold"
                android:textSize="@dimen/text_titulo"
                android:textColor="@color/textoAzul"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_alignBaseline="@id/chkEfetar"
                android:layout_alignLeft="@id/chkTarjeta"

                />

            <CheckBox
                android:id="@+id/chkCuentacasa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/config_strCuentaCasa"
                android:textStyle="bold"
                android:textSize="@dimen/text_titulo"
                android:textColor="@color/textoAzul"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="70dp"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/chkEfetar"

                />
            <CheckBox
                android:id="@+id/chkCredito"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/config_strCredito"
                android:textStyle="bold"
                android:textSize="@dimen/text_titulo"
                android:textColor="@color/textoAzul"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_alignBaseline="@id/chkCuentacasa"
                android:layout_alignLeft="@id/chkTarjeta"

                />


        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/config_strTimerFragment"
            android:textColor="@color/textoAzul"
            android:textSize="@dimen/text_titulo"
            android:layout_marginTop="10dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etTimerFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="70dp"
            android:inputType="textUri"
            android:textColor="@color/colorAccent"
            android:hint="@string/config_strTimerFragment"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        </LinearLayout>


    </LinearLayout>


</ScrollView>