<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="20dp"
    android:paddingLeft="10dp"

    >
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/config_strSincronizarAuto"
        android:id="@+id/chkSincronizaAuto"
        android:checked="true"
        android:layout_marginBottom="10dp"
        android:textStyle="bold"
        android:textColor="@color/textoAzul"
        android:textSize="@dimen/text_titulo"
        android:layout_marginLeft="40dp"/>
    />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/categoria"
        />

    <RadioGroup
        android:id="@+id/rgBDAccion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rbBorrarTablas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="1dp"
            android:checked="false"
            android:tag="BORRAR"
            android:text="@string/config_strBDBorraTablas"
            android:textStyle="bold"
            android:textColor="@color/textoAzul"
            android:textSize="@dimen/text_titulo"/>


        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/config_strBDNoBorraConfig"
            android:id="@+id/chkNoBorrarConfig"
            android:checked="true"
            android:layout_marginBottom="10dp"
            android:textStyle="bold"
            android:textColor="@color/textoAzul"
            android:textSize="@dimen/text_titulo"
            android:layout_marginLeft="40dp"/>
        />

        <RadioButton
            android:id="@+id/rbCopiarTablas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="20dp"
            android:checked="false"
            android:tag="BD2SD"
            android:layout_below="@id/rbBorrarTablas"
            android:text="@string/config_strBDCopiarBD"
            android:textStyle="bold"
            android:textColor="@color/textoAzul"
            android:textSize="@dimen/text_titulo"/>
        />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="20dp"
            android:checked="false"
            android:tag="SD2BD"
            android:layout_below="@id/rbCopiarTablas"
            android:text="@string/config_strBDRecuperarBD"
            android:textStyle="bold"
            android:textColor="@color/textoAzul"
            android:textSize="@dimen/text_titulo"
            />

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/categoria"
        />

</LinearLayout>

</ScrollView>