<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        android:text="@string/dialog_strUnidades"
        android:textStyle="bold"
        android:textColor="@color/textoAzul"
        android:textSize="@dimen/text_titulo"/>

    <EditText
        android:id="@+id/etUnidades"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:text="12"
        android:inputType="number"
        android:hint="@string/dialog_strHintUnidades"
        android:textStyle="bold"
        android:textSize="@dimen/text_titulo"
        android:textColor="@color/colorAccent"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        android:text="@string/dialog_strSubmesa"
        android:textStyle="bold"
        android:textColor="@color/textoAzul"
        android:textSize="@dimen/text_titulo"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvSubmesas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="10dp"
        tools:itemCount="5"
        tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/submesas_cardview"
        tools:orientation="vertical"
        tools:spanCount="2"
        />
</LinearLayout>